[tool.poetry]
name = "govee-btled-H613B"
version = "0.0.3"
description = "Control Govee LED BLE device H613B"
authors = ["gilcu3 <gilcu3@github.com>"]
license = "Apache Software License 2.0"
readme = "README.md"
repository = "https://github.com/gilcu3/govee-btled-H613B"
documentation = ""
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "govee_btled_H613B", from = "src" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/gilcu3/govee-btled-H613B/issues"
"Changelog" = "https://github.com/gilcu3/govee-btled-H613B/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.9"
bleak-retry-connector = ">=2.3.0"
bleak = ">=0.19.0"
async-timeout = ">=4.0.1"
colour = ">=0.1.5"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^3.0"

[tool.semantic_release]
branch = "master"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "src/govee_btled_H613B/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=govee_btled_H613B --cov-report=term-missing:skip-covered"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

[tool.isort]
profile = "black"
known_first_party = ["govee_btled_H613B", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'docs/.*',
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
